# openbubbles

./: .gitignore  .gitmodules  README.md  build.sh  codegen_logs  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: build.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
assets/rustpush/: uti-map.json
assets/scripts/: AppleAccountSetup.js
lib/: main.dart  objectbox-model.json  objectbox.g.dart
lib/app/components/: custom_text_editing_controllers.dart
lib/app/components/avatars/: contact_avatar_widget.dart
lib/app/layouts/chat_creator/: chat_creator.dart
lib/app/layouts/conversation_details/: conversation_details.dart
lib/app/layouts/facetime/: facetime.dart  facetime_creator.dart
lib/app/layouts/findmy/: findmy_page.dart
lib/app/layouts/fullscreen_media/: fullscreen_holder.dart  fullscreen_image.dart
lib/app/layouts/settings/: settings_page.dart
lib/app/layouts/setup/: setup_view.dart
lib/app/layouts/startup/: failure_to_start.dart
lib/app/wrappers/: tablet_mode_wrapper.dart
lib/database/: database.dart
lib/database/global/: attributed_body.dart  findmy_friend.dart  message_part.dart  message_summary_info.dart  payload_data.dart  queue_items.dart  server_payload.dart  settings.dart
lib/database/html/: chat.dart
lib/database/io/: attachment.dart  chat.dart  contact.dart  handle.dart  message.dart
lib/helpers/backend/: startup_tasks.dart
lib/helpers/network/: network_error_handler.dart  network_tasks.dart
lib/helpers/types/: constants.dart
lib/helpers/types/helpers/: message_helper.dart
lib/helpers/ui/: facetime_helpers.dart  message_widget_helpers.dart  reaction_helpers.dart  ui_helpers.dart
lib/services/: services.dart
lib/services/backend/: action_handler.dart
lib/services/backend/filesystem/: filesystem_service.dart
lib/services/backend/java_dart_interop/: intents_service.dart  method_channel_service.dart
lib/services/backend/lifecycle/: lifecycle_service.dart
lib/services/backend/notifications/: notifications_service.dart
lib/services/backend/queue/: outgoing_queue.dart  queue_impl.dart
lib/services/backend/settings/: settings_service.dart
lib/services/backend/setup/: setup_service.dart
lib/services/backend/sync/: sync_service.dart
lib/services/network/: backend_service.dart  downloads_service.dart  http_service.dart  socket_service.dart
lib/services/rustpush/: rustpush_service.dart
lib/services/ui/: attachments_service.dart  contact_service.dart  extension_service.dart
lib/services/ui/chat/: chat_manager.dart  chats_service.dart  conversation_view_controller.dart
lib/services/ui/message/: message_widget_controller.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: api.dart  api.freezed.dart
lib/utils/: share.dart
lib/utils/logger/: logger.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
rust/: Cargo.toml  build-uniffi.sh  build.rs
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs  mac_hw_info.proto  native.rs
rust/src/api/: api.rs  hw_testing.plist  id_testing.plist  mirrors.rs  mod.rs  native.rs_  sharedstreams_testing.plist
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_bluebubbles.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_bluebubbles.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+139 files in other folders)
