[package]
name = "rust_lib_bluebubbles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.3.0"
rustpush = { path = "../rustpush", features = ["macos-validation-data", "remote-anisette-v3"] }
plist = "1.5.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
anyhow = "1.0.75"
uniffi = { git = "https://github.com/mozilla/uniffi-rs", features = [ "cli", "tokio" ] }
async-recursion = "1.0.5"
icloud_auth = { git = "https://github.com/OpenBubbles/apple-private-apis", rev = "a3b124439e3989312d55c4b55c60499e987f9f1d", features = ["remote-anisette-v3"] }
omnisette = { git = "https://github.com/OpenBubbles/apple-private-apis", rev = "a3b124439e3989312d55c4b55c60499e987f9f1d", features = ["remote-anisette-v3"] }
open-absinthe = { git = "https://github.com/stevesoltys/openbubbles-build-modules" }
prost = "0.12"
# Only necessary if using Protobuf well-known types:
prost-types = "0.12"
multi_log = "0.1.2"
flexi_logger = "0.28.5"
log = "0.4.22"
pretty_env_logger = "0.5.0"
uuid = { version = "1.4.1", features = ["v4"] }
futures = "0.3.30"
base64 = "0.22.1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", features = [ "build" ] }
prost-build = { version = "0.12" }

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
